[AIRFLOW-6697] fix modal_backdrop z-index (#7313)

--- a/airflow/www/static/css/main.css
+++ b/airflow/www/static/css/main.css
@@ -29,7 +29,7 @@ a.navbar-brand span {
     color: white;
 }
 .modal-backdrop{
-    z-index: 0;
+    z-index: 2;
     position: fixed;
 }
 .modal-content{
